--- a/index.ipynb
+++ b/index.ipynb
@@ -73,11 +73,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your answer here"
+    "# P = .250"
    ]
   },
   {
@@ -89,11 +89,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your answer here"
+    "#3rd trial:  P = 0.1250\n",
+    "#5th trial:  P = 0.0313 . or  .5**5"
    ]
   },
   {
@@ -106,15 +107,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "def geometric_dist(y,p):\n",
     "    \"\"\"y is a discrete random variable. It should be an integer that is greater then zero.\n",
     "    p is the probability of a success for the Bernoulli experiment to be conducted.\n",
-    "    This function should return the probability that the first successful Bernoulli experiment will occur on the yth trial.\"\"\"\n",
-    "    prob = #The probability that the first successful bernoulli experiment occurs on the yth trial.\n",
+    "    This function should return the probability that the first successful Bernoulli \n",
+    "    experiment will occur on the yth trial.\n",
+    "    \n",
+    "    The probability that the first successful bernoulli experiment occurs on the yth trial.\"\"\"\n",
+    "        \n",
+    "    all_previous = (1-p)**(y-1)\n",
+    "    this_trial = p\n",
+    "    prob = all_previous * this_trial\n",
+    "    \n",
     "    return prob"
    ]
   },
@@ -128,12 +136,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.8554687500000146e-12\n"
+     ]
+    }
+   ],
    "source": [
     "#Code and answer here\n",
-    "prob = "
+    "prob = geometric_dist(10, .95)\n",
+    "print(prob)"
    ]
   },
   {
@@ -146,12 +163,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.3584859224085419"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Code and answer here\n",
-    "prob = "
+    ".95**20"
    ]
   },
   {
@@ -165,12 +193,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0017010000000000011\n"
+     ]
+    }
+   ],
    "source": [
     "#Code and answer here\n",
-    "prob = "
+    "prob = geometric_dist(6, .7)\n",
+    "print(prob)"
    ]
   },
   {
@@ -183,12 +220,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.16806999999999994\n"
+     ]
+    }
+   ],
    "source": [
     "#Code and answer here\n",
-    "prob = "
+    "prob = .7**5\n",
+    "print(prob)"
    ]
   },
   {
@@ -217,7 +263,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
